# python-empowerdata-projeto-streamlit

./: README.md  app.py  cadastro.py  pyproject.toml
.devcontainer/: devcontainer.json
pages/: consulta.py
