[tool.poetry]
name = "m9pp"
version = "1.0"
description = "Projeto pratico do curso Dominando a Linguagem Python da Empower Data."
authors = ["Murilo Tuvani <murilo.tuvani@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
